--- a/My profile.html
+++ b/My profile.html
@@ -4,6 +4,11 @@
         <meta name="viewport"
         content="width=device-width,initial-scale=1">
         <style>
+            
+body {
+  background-color: lightpink;
+}
+
             body {
 margin:0;
 font-style: italic;
@@ -58,7 +63,7 @@ font-style: italic;
             </p>
           </div>
           <div id="Academic Qualifications">
-            <h2 style="color: #021052;">My Academic Qualifoications</h2>
+            <h2 style="color: #021052;">My Academic Qualifications</h2>
             <p>Successfully completed A/L in 2021. 
                 <table style="border: 1px solid black;border-collapse:collapse;">
                 <thead style="color: black;"> 
